# nuttx-testnom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yaml
nxtestnom/: __init__.py
tests/: test_nxtestnom.py
